kustomize/scaling-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaling-demo
  labels:
    app.kubernetes.io/name: scaling-demo
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
