kustomize/scaling-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scaling-demo
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/revision-history-limit: "1"
  labels:
    app.kubernetes.io/name: scaling-demo
spec:
  ingressClassName: contour
  rules:
  - host: scaling-demo.tools.kilchhofer.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scaling-demo
            port:
              name: http
  tls:
  - hosts:
    - scaling-demo.tools.kilchhofer.info
    secretName: scaling-demo-cert
